# trading-automator

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
audit/: 00-audit-surface.json  00-check-catalogue.json  00-system-map.md  01-claims-ledger.md  02-calibration.md  03-findings.json  03-findings.md  03b-coverage-ledger.md  04-remediation-plan.md  05-verification.md  06-residual-risk-register.md  07-substitution-ledger.md  08-standing-regime.md  09-executive-summary.md  engagement-status.json
audit/evidence/: b06-history-scan.txt  c01-security-demonstration.txt  phase5-gate-demonstration.txt
governance/: capability-labels.json  constitution.md  llm-risk-matrix.md  mandate.md  security-notes.md  spec.md
governance/mandate/: manifest.json  part1.md  part2.md
scripts/: build_catalogue.py  build_findings.py  build_findings_c.py  build_findings_phase6.py  check_deps.py  check_model_pins.py  gate_selftest.py  mutation_smoke.py  policy_gate.py  secret_scan.py
src/: analysis.py  cache.py  engine.py  llm.py  main.py  notifications.py  prompts.py  scheduler.py  settings.py  state.py
src/exchanges/: __init__.py  base.py  binance_client.py  etoro_client.py
src/web/: app.py
src/web/static/: index.html
tests/: conftest.py  test_engine.py  test_llm_and_exchange.py  test_security_invariants.py  test_settings.py  test_trading_cap.py  test_web.py  test_web_auth.py
