[project]
name = "trading-automator"
version = "2.0.0"
description = "Automated crypto portfolio manager on Binance/eToro with an LLM+TradingView pipeline"
requires-python = ">=3.11"
readme = "README.md"

# ---------------------------------------------------------------------------
# ruff: the enforced coding standard (A-13) and part of the security scan (A-08).
# BLE (blind-except) is the standing control for A-26 / calibration defect D4:
# a swallowed exception on a consequential path fails the build.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# The gate lints the product (src + tests). One-shot audit generators under
# scripts/ and the audit/governance evidence trees are not product code.
extend-exclude = ["scripts", "audit", "governance"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # import sorting / boundaries (A-05/A-09)
    "B",             # bugbear
    "BLE",           # blind-except -> catches D4 (A-26)
    "UP",            # pyupgrade
    "SIM",           # simplify
]
# A bare/blind except must be justified in code, never silent. Suppressions are
# counted by the CI gate (A-08/A-13 ratchet); do not add # noqa without a reason.
[tool.ruff.lint.per-file-ignores]
# Tests may assert on broad exceptions and use loose patterns.
"tests/*" = ["S", "BLE", "B011", "B017"]
# Prompt templates are long prose lines inside triple-quoted f-strings; wrapping
# them would inject newlines into the prompt sent to the model.
"src/prompts.py" = ["E501"]

[tool.mypy]
# Static type gate (state-of-the-art best practice). Behaviour-preserving:
# annotations are inert at runtime; the test suite + mutation smoke remain the
# characterisation net. disallow_untyped_defs gives the gate teeth — a new
# unannotated function fails it. Strictness ratchets up over time, never down.
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true      # third-party libs ship no stubs; not our concern
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Do not type-check against third-party SDK internals — treat them as untyped.
# We check OUR logic; the vendor libraries are exercised by the test suite.
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "tradingview_ta.*", "astral.*", "pytz.*", "uvicorn.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.mutmut]
# Mutation testing is the meta-gate (A-02): the suite must detect injected faults.
# Scoped to the decision core, where a surviving mutant means the net has a hole.
paths_to_mutate = "src/engine.py,src/llm.py,src/settings.py"
tests_dir = "tests/"
runner = "python -m pytest -q -x"
